// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="sidebar"
  >
    <h1>
      Notes
    </h1>
    <input
      className="search md-ish"
      onChange={[Function]}
      placeholder="Search notes"
      type="search"
      value=""
    />
    <ul>
      <li
        className="no-notes"
      >
        No notes yet. Add some :)
      </li>
    </ul>
    <button
      className="add-button md-ish hover-cursor"
      onClick={[Function]}
    >
       Add Note
    </button>
  </div>
</div>
`;

exports[`Delete note test 1`] = `
<div
  className="container"
>
  <div
    className="sidebar"
  >
    <h1>
      Notes
    </h1>
    <input
      className="search md-ish"
      onChange={[Function]}
      placeholder="Search notes"
      type="search"
      value=""
    />
    <ul>
      <li
        className="no-notes"
      >
        No notes yet. Add some :)
      </li>
    </ul>
    <button
      className="add-button md-ish hover-cursor"
      onClick={[Function]}
    >
       Add Note
    </button>
  </div>
</div>
`;

exports[`Main workflow test 1`] = `
<div
  className="container"
>
  <div
    className="sidebar"
  >
    <h1>
      Notes
    </h1>
    <input
      className="search md-ish"
      onChange={[Function]}
      placeholder="Search notes"
      type="search"
      value=""
    />
    <ul>
      <li
        className="no-notes"
      >
        No notes yet. Add some :)
      </li>
    </ul>
    <button
      className="add-button md-ish hover-cursor"
      onClick={[Function]}
    >
       Add Note
    </button>
  </div>
  <div
    className="dashboard"
  >
    <h2>
      Add note
    </h2>
    <div
      className="notes-contents"
    >
      <a
        className="delete-note"
        href="#"
        onClick={[Function]}
      >
        Cancel
      </a>
      <textarea
        className="note-text md-ish"
        onChange={[Function]}
        placeholder="Note's text"
      />
      <button
        className="save-note md-ish hover-cursor"
        onClick={[Function]}
      >
        Add
      </button>
    </div>
  </div>
</div>
`;

exports[`Main workflow test 2`] = `
<div
  className="container"
>
  <div
    className="sidebar"
  >
    <h1>
      Notes
    </h1>
    <input
      className="search md-ish"
      onChange={[Function]}
      placeholder="Search notes"
      type="search"
      value=""
    />
    <ul>
      <li
        onClick={[Function]}
      >
        Added note text
      </li>
    </ul>
    <button
      className="add-button md-ish hover-cursor"
      onClick={[Function]}
    >
       Add Note
    </button>
  </div>
</div>
`;

exports[`Search workflow test 1`] = `
<div
  className="container"
>
  <div
    className="sidebar"
  >
    <h1>
      Notes
    </h1>
    <input
      className="search md-ish"
      onChange={[Function]}
      placeholder="Search notes"
      type="search"
      value="Some irrelevant text here"
    />
    <ul>
      <li
        className="no-notes"
      >
        No such notes found :( 
      </li>
    </ul>
    <button
      className="add-button md-ish hover-cursor"
      onClick={[Function]}
    >
       Add Note
    </button>
  </div>
</div>
`;

exports[`Search workflow test 2`] = `
<div
  className="container"
>
  <div
    className="sidebar"
  >
    <h1>
      Notes
    </h1>
    <input
      className="search md-ish"
      onChange={[Function]}
      placeholder="Search notes"
      type="search"
      value="Added note"
    />
    <ul>
      <li
        onClick={[Function]}
      >
        Added note text
      </li>
    </ul>
    <button
      className="add-button md-ish hover-cursor"
      onClick={[Function]}
    >
       Add Note
    </button>
  </div>
</div>
`;
